test/deca/context/invalid/3_31_print_bad_type.deca
// Description:
//   print une classe
//
// Résultat :
// Affiche un string

class A {
    int a;
}

{
    A classA;
    print(classA);
}
